--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "packageManager": "pnpm@10.6.5",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^8.13.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
