--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^8.13.1"
+    "mongoose": "^8.13.1",
+    "multer": "1.4.5-lts.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
